--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
             </p>
             <div class="text-sm text-slate-500">
                 <p>&copy; 2024 The Hidden World of London. Made with ✨ and wonder.</p>
+                <p class="mt-2">
+                    <a href="simple-admin.html" class="text-slate-600 hover:text-slate-400 text-xs">
+                        <i class="fas fa-key mr-1"></i>Content Manager
+                    </a>
+                </p>
             </div>
         </div>
     </footer>
