--- a/simple-admin.html
+++ b/simple-admin.html
@@ -14,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/quill-image-resize-module@3.0.0/image-resize.min.js"></script>
     <!-- Sortable.js for drag & drop reordering -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+    <!-- API Helpers for cloud database -->
+    <script src="js/api-helpers.js"></script>
     <style>
         body { font-family: 'Nunito', sans-serif; }
         .admin-card { background: #f8fafc; border: 2px solid #e2e8f0; border-radius: 12px; padding: 24px; margin-bottom: 20px; }
@@ -1052,6 +1054,17 @@
     
     // Also run fix periodically to catch new editors
     setInterval(fixFontDropdowns, 3000);
+    
+    // Initialize API connection and check for migration when page loads
+    document.addEventListener('DOMContentLoaded', function() {
+        // Give a moment for the admin system to load first
+        setTimeout(() => {
+            if (window.contentAPI && typeof checkForLocalStorageMigration === 'function') {
+                console.log('🌐 Checking for localStorage migration...');
+                // Migration check will be called by loadAllContent
+            }
+        }, 1000);
+    });
     </script>
 </body>
 </html>
