--- a/simple-admin.html
+++ b/simple-admin.html
@@ -16,6 +16,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
     <!-- API Helpers for cloud database -->
     <script src="js/api-helpers.js"></script>
+    <!-- Database initialization -->
+    <script src="js/database-init.js"></script>
     <style>
         body { font-family: 'Nunito', sans-serif; }
         .admin-card { background: #f8fafc; border: 2px solid #e2e8f0; border-radius: 12px; padding: 24px; margin-bottom: 20px; }
