--- a/simple-admin-reset.html
+++ b/simple-admin-reset.html
@@ -553,7 +553,8 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="js/simple-admin-reset.js"></script>
+    <script src="js/data-manager.js"></script>
+<script src="js/simple-admin-reset.js"></script>
     <script>
     // Font names mapping for better display in dropdowns
     const fontNames = {
