--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/main.js"></script>
+    <script src="js/data-manager.js"></script>
+<script src="js/website-data.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
