--- a/simple-admin-reset.html
+++ b/simple-admin-reset.html
@@ -554,6 +554,7 @@
 
     <!-- JavaScript -->
     <script src="js/data-manager.js"></script>
+<script src="js/admin-file-writer.js"></script>
 <script src="js/simple-admin-reset.js"></script>
     <script>
     // Font names mapping for better display in dropdowns
