--- a/simple-admin-reset.html
+++ b/simple-admin-reset.html
@@ -253,6 +253,19 @@
             </div>
         </header>
 
+        <!-- Simple Instructions -->
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-4">
+            <div class="bg-green-50 border border-green-200 rounded-lg p-4">
+                <div class="flex items-center">
+                    <i class="fas fa-info-circle text-green-600 mr-3"></i>
+                    <div>
+                        <h3 class="font-semibold text-green-800">✨ Simple to Use</h3>
+                        <p class="text-sm text-green-700 mt-1">Add or edit content below, then click Save. Your changes will appear on the website immediately on all devices.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Success Message -->
         <div id="success-message" class="hidden max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-4">
             <div class="success-msg">
@@ -553,8 +566,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="js/data-manager.js"></script>
-<script src="js/admin-file-writer.js"></script>
+    <script src="js/simple-save.js"></script>
 <script src="js/simple-admin-reset.js"></script>
     <script>
     // Font names mapping for better display in dropdowns
