--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body class="bg-gradient-to-br from-slate-800 via-purple-900 to-blue-900 text-white font-inter">
     <!-- Floating Admin Button -->
     <div class="fixed top-4 right-4 z-50">
-        <a href="live-admin.html" class="bg-gradient-to-r from-purple-600 to-pink-600 hover:from-purple-700 hover:to-pink-700 text-white p-3 rounded-full shadow-lg transition-all transform hover:scale-110">
+        <a href="global-admin.html" class="bg-gradient-to-r from-purple-600 to-pink-600 hover:from-purple-700 hover:to-pink-700 text-white p-3 rounded-full shadow-lg transition-all transform hover:scale-110">
             <i class="fas fa-cog"></i>
         </a>
     </div>
@@ -327,7 +327,7 @@
             <div class="text-sm text-slate-500">
                 <p>&copy; 2024 The Hidden World of London. Made with ✨ and wonder.</p>
                 <p class="mt-2">
-                    <a href="live-admin.html" class="text-slate-600 hover:text-slate-400 text-xs">
+                    <a href="global-admin.html" class="text-slate-600 hover:text-slate-400 text-xs">
                         <i class="fas fa-key mr-1"></i>Content Manager
                     </a>
                 </p>
@@ -336,7 +336,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/live-website-data.js"></script>
-<script src="js/main.js"></script>
+    <script src="js/global-main.js"></script>
 </body>
 </html>
